# onedrive-ubuntu

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  onedrive-ubuntu.desktop
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: api.rs  auth.rs  config.rs  gui.rs  main.rs  sync.rs  tray.rs
